# crosscopy-client-cli

./: .env  .eslintrc  .gitignore  .gitmodules  .npmrc  .prettierrc  Cargo.toml  README.md  codegen.yml  dev.sqlite  exp.ts  image-io.ts  package.json  payload.md  tsconfig.json
.github/workflows/: cargo-ci.yml
src/: lib.rs  main.rs
src/api/: device.ts  index.ts
src/argparse/: definition.rs  mod.rs  stdin_reader.rs
src/argparse/configuration/: context.rs  mod.rs  types.rs
src/argparse/parser/: copy.rs  login.rs  mod.rs  paste.rs  register.rs  search.rs  setting.rs  view.rs
src/commands/: clear.ts  copy.ts  default.ts  delete.ts  exp.ts  index.ts  listen.ts  login.rs  login.ts  mod.rs  paste.ts  register.ts  root.ts  sync.ts  types.rs  upload.ts  view.ts
src/commands/profile/: add.ts  delete.ts  ls.ts  rename.ts
src/commands/setting/: index.ts  mode.ts  set.ts
src/config/: auth.ts  config.ts  index.ts  setting.ts
src/graphql/: gql-req.ts
src/hooks/init/: auth.ts  config.ts  version.ts  wakeup.ts
src/hooks/postrun/: cleanup.ts
src/services/: copy.rs  listen.rs  login.rs  mod.rs  register.rs  types.rs
src/types/: args.rs
src/util/: auth.ts  clipboard-monitor.ts  clipboard.ts  encoding.ts  graphql.ts  logger.ts  plugin.ts  stdin.ts  sync.ts  url.ts  util.ts
src/utils/: exp.rs  mod.rs  validator.rs
test/commands/: default.test.ts  exp.test.ts  paste.test.ts  setting.test.ts
test/commands/profile/: add.test.ts  delete.test.ts  ls.test.ts  rename.test.ts
tests/: dummy.rs
