[package]
name = "crosscopy"
version = "0.1.0"
edition = "2021"
authors = ["Huakun"]
description = "CrossCopy Rust Package and CLI App"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive", "cargo"] }

[[bin]]
name = "xc"
path = "src/main.rs"
