[package]
name = "crosscopy"
version = "0.1.0"
edition = "2021"
authors = ["Huakun"]
description = "CrossCopy Rust Package and CLI App"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive", "cargo"] }
dirs = "5.0.0"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"

[[bin]]
name = "xc"
path = "src/main.rs"
