[package]
name = "crosscopy"
version = "0.1.0"
edition = "2021"
authors = ["Huakun"]
description = "CrossCopy Rust Package and CLI App"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.1.13", features = ["derive", "cargo"] }
clap_complete = "4.2.0"
clipboard-master = "3.1.3"
crossterm = "0.25.0"
dirs = "5.0.0"
regex = "1.7.3"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
termion = "2.0.1"
tui = "0.19.0"
tui-textarea = "0.2.0"

[[bin]]
name = "xc"
path = "src/main.rs"
